Feat: category db get #218 category를 클릭했을 때 db 정보 받아와서 recycelrview 갱신

--- a/agijagi/app/src/main/res/layout/fragment_category_detail_info_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_category_detail_info_list.xml
@@ -14,6 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/menu_category"
         app:navigationIcon="@drawable/arrow_back_24px" />
 
     <androidx.recyclerview.widget.RecyclerView
