Feat: 드롭다운 추가 #284
#224에서 삭제했던 드롭다운 메뉴 다시 추가
ordermade 항목 삭제

--- a/agijagi/app/src/main/res/values/array.xml
+++ b/agijagi/app/src/main/res/values/array.xml
@@ -57,11 +57,15 @@
         <item>새마을금고</item>
     </array>
 
-    <array name="product_add_category">
+    <array name="product_dropdown_select_category">
         <item>Plate</item>
         <item>Cup</item>
         <item>Bowl</item>
-        <item>Order made</item>
+    </array>
+
+    <array name="product_dropdown_select_isordermade">
+        <item>주문 제작 가능</item>
+        <item>주문 제작 불가능</item>
     </array>
 
     <array name="custom_option_select">
