Feat: 상품 수정화면 드롭다운 추가 #284

--- a/agijagi/app/src/main/res/layout/fragment_product_update.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_update.xml
@@ -209,12 +209,13 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/inputlayout_product_update_select_category"
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:textColorHint="@color/jagi_black_42"
-                    app:hintEnabled="true">
+                    app:hintEnabled="false">
 
                     <AutoCompleteTextView
                         android:id="@+id/menu_product_update_select_category"
@@ -222,7 +223,27 @@
                         android:layout_height="wrap_content"
                         android:hint="카테고리 선택"
                         android:inputType="none"
-                        app:simpleItems="@array/product_add_category" />
+                        app:simpleItems="@array/product_dropdown_select_category" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/inputlayout_product_update_select_ordermade"
+                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:textColorHint="@color/jagi_black_42"
+                    app:hintEnabled="false">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/menu_product_update_select_ordermade"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:focusable="false"
+                        android:hint="주문제작 가능 여부 선택"
+                        android:inputType="none"
+                        app:simpleItems="@array/product_dropdown_select_isordermade" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
