--- a/agijagi/app/src/main/res/layout/item_product_add_add_picture.xml
+++ b/agijagi/app/src/main/res/layout/item_product_add_add_picture.xml
@@ -34,6 +34,7 @@
         android:layout_height="24dp"
         android:layout_margin="8dp"
         android:background="@drawable/circle_checkbox_selector"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -43,6 +44,7 @@
         android:layout_height="24dp"
         android:layout_margin="8dp"
         android:background="@drawable/close_24px"
+        android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
