Feat: displayDialogUserNotLogin 화면 연결 #302 로그인 클릭 시 로그인 화면으로 이동 로그인 화면 백 스택 수정

--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -110,6 +110,9 @@
         <action
             android:id="@+id/action_customProductDetailFragment_to_categoryDetailInfoListFragment"
             app:destination="@id/categoryDetailInfoListFragment" />
+        <action
+            android:id="@+id/action_customProductDetailFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 
     <fragment
@@ -146,6 +149,9 @@
         <action
             android:id="@+id/action_productDetailFragment_to_categoryDetailInfoListFragment"
             app:destination="@id/categoryDetailInfoListFragment" />
+        <action
+            android:id="@+id/action_productDetailFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 
     <fragment
@@ -557,6 +563,12 @@
         <action
             android:id="@+id/action_loginFragment_to_signupSelectFragment"
             app:destination="@id/signupSelectFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_productDetailFragment"
+            app:destination="@id/productDetailFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_customProductDetailFragment"
+            app:destination="@id/customProductDetailFragment" />
     </fragment>
 
     <fragment
