--- a/agijagi/app/src/main/res/layout/item_category_detail_info_list.xml
+++ b/agijagi/app/src/main/res/layout/item_category_detail_info_list.xml
@@ -1,19 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="4dp">
 
-    <ImageView
-        android:id="@+id/imageview_category_detail_info_list_photo"
-        android:layout_width="match_parent"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cardview_category_detail_info_list"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/wish_list_logo"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/jagi_brown">
+
+        <ImageView
+            android:id="@+id/imageview_category_detail_info_list_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:src="@drawable/wish_list_logo"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </com.google.android.material.card.MaterialCardView>
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -22,8 +34,8 @@
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:src="@drawable/favorite_pressed_button"
-        app:layout_constraintBottom_toBottomOf="@id/imageview_category_detail_info_list_photo"
-        app:layout_constraintEnd_toEndOf="@id/imageview_category_detail_info_list_photo" />
+        app:layout_constraintBottom_toBottomOf="@id/cardview_category_detail_info_list"
+        app:layout_constraintEnd_toEndOf="@id/cardview_category_detail_info_list" />
 
     <TextView
         android:id="@+id/textview_category_detail_info_brand"
@@ -36,7 +48,7 @@
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageview_category_detail_info_list_photo" />
+        app:layout_constraintTop_toBottomOf="@id/cardview_category_detail_info_list" />
 
     <TextView
         android:id="@+id/textview_category_detail_info_name"
