--- a/agijagi/app/src/main/res/layout/item_category_list_shimmer.xml
+++ b/agijagi/app/src/main/res/layout/item_category_list_shimmer.xml
@@ -9,8 +9,8 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardview_category_list_shimmer"
-        android:layout_width="185dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="200dp"
         app:cardCornerRadius="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/search_result_default_image" />
+            android:src="@drawable/category_list_item_default_image" />
 
     </com.google.android.material.card.MaterialCardView>
 
