--- a/agijagi/app/src/main/res/layout/fragment_purchase_complete.xml
+++ b/agijagi/app/src/main/res/layout/fragment_purchase_complete.xml
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="32dp"
-        android:text="주문자"
+        android:text="수령인"
         android:textColor="@color/black"
         android:textSize="13sp"
         android:textStyle="bold"
@@ -124,11 +124,21 @@
         app:layout_constraintTop_toTopOf="@+id/textView_purchase_complete_shipping_address" />
 
     <TextView
+        android:id="@+id/textView_purchase_complete_shipping_address_detail_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="경기도 고양시 일산동구 어쩌구 저쩌구"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/textView_purchase_complete_shipping_address_value"
+        app:layout_constraintTop_toBottomOf="@+id/textView_purchase_complete_shipping_address_value" />
+
+    <TextView
         android:id="@+id/textView_purchase_complete_shipping_method"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="56dp"
         android:text="배송방법"
         android:textColor="@color/black"
         android:textSize="13sp"
