Feat: 커스텀 상품 상세 화면 -> 채팅룸으로 sellerId, brand 전달 #320

--- a/agijagi/app/src/main/res/navigation/navigation_graph.xml
+++ b/agijagi/app/src/main/res/navigation/navigation_graph.xml
@@ -105,8 +105,8 @@
             android:id="@+id/action_customProductDetailFragment_to_shoppingListFragment"
             app:destination="@id/shoppingListFragment" />
         <action
-            android:id="@+id/action_customProductDetailFragment_to_chattingListFragment"
-            app:destination="@id/chattingListFragment" />
+            android:id="@+id/action_customProductDetailFragment_to_chattingRoomFragment"
+            app:destination="@id/chattingRoomFragment" />
         <action
             android:id="@+id/action_customProductDetailFragment_to_categoryDetailInfoListFragment"
             app:destination="@id/categoryDetailInfoListFragment" />
