Feat: 내 정보 수정 기능 구현 #316

--- a/agijagi/app/src/main/res/layout/fragment_profile_management.xml
+++ b/agijagi/app/src/main/res/layout/fragment_profile_management.xml
@@ -36,7 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:text="aaaa@gmail.com"
+                android:text="email"
                 android:textSize="22sp" />
 
             <View
@@ -71,7 +71,7 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_input_custom_option_text"
+                        android:id="@+id/edit_input_profile_management_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="홍길동"
@@ -107,37 +107,11 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layout_google_id"
+                android:id="@+id/layout_no_google_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/layout_profile">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:text="연락처"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginTop="8dp"
-                    app:hintEnabled="false">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_input_call_number_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="01012345678"
-                        android:inputType="number"
-                        android:textSize="14sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -157,10 +131,9 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_input_password_text"
+                        android:id="@+id/edit_input_profile_management_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="*********"
                         android:inputType="textPassword"
                         android:textSize="14sp" />
 
@@ -184,10 +157,9 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/edit_input_check_password_text"
+                        android:id="@+id/edit_input_profile_management_check_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="*********"
                         android:inputType="textPassword"
                         android:textSize="14sp" />
 
@@ -227,6 +199,7 @@
                 android:orientation="horizontal">
 
                 <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox_profile_management_sms"
                     style="@style/CustomCheckBoxSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
@@ -235,6 +208,7 @@
                     android:text="SMS" />
 
                 <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/checkbox_profile_management_email"
                     style="@style/CustomCheckBoxSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="20dp"
