Fix: 상품리스트 DB 수정 #338 DB Query수정 상품순서 내림차순 정렬 가격, 날짜 format shimmer imageView UI 수정

--- a/agijagi/app/src/main/res/layout/item_product_list_shimmer.xml
+++ b/agijagi/app/src/main/res/layout/item_product_list_shimmer.xml
@@ -31,7 +31,7 @@
                 android:layout_height="72dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:background="#9F9F9F"/>
+                android:src="@drawable/order_default_image"/>
         </com.google.android.material.card.MaterialCardView>
 
         <TextView
