Fix: 카테고리 상세 상품 리스트가 보이지 않는 이슈 해결 #347

--- a/agijagi/app/src/main/res/layout/fragment_category_detail_info_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_category_detail_info_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,12 +14,13 @@
         android:theme="@style/Theme.AgijagiToolbar"
         app:menu="@menu/menu_category"
         app:navigationIcon="@drawable/arrow_back_24px" />
+
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_frame_layout_category_list"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="12dp">
 
         <GridLayout
@@ -28,14 +28,13 @@
             android:layout_height="match_parent"
             android:columnCount="1">
 
-            <include layout="@layout/item_category_list_shimmer"/>
-
             <include layout="@layout/item_category_list_shimmer" />
 
             <include layout="@layout/item_category_list_shimmer" />
 
             <include layout="@layout/item_category_list_shimmer" />
 
+            <include layout="@layout/item_category_list_shimmer" />
 
         </GridLayout>
 
@@ -43,11 +42,9 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_category_detail_info_list"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"/>
-
-
+        android:layout_marginEnd="12dp" />
 
 </LinearLayout>
