--- a/agijagi/app/src/main/res/layout/fragment_chatting_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_chatting_list.xml
@@ -25,7 +25,7 @@
         android:gravity="center"
         android:text="채팅 기록이 없습니다"
         android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/layout_chatting_list_bottom_button"
         app:layout_constraintTop_toBottomOf="@+id/material_toolbar_chatting_list" />
 
@@ -44,6 +44,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="8dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recyclerview_chatting_list">
 
