--- a/agijagi/app/src/main/res/layout/fragment_chatting_room.xml
+++ b/agijagi/app/src/main/res/layout/fragment_chatting_room.xml
@@ -12,8 +12,7 @@
         android:theme="@style/Theme.AgijagiToolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/arrow_back_24px"
-        app:title="홍길동" />
+        app:navigationIcon="@drawable/arrow_back_24px" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview_chatting_room"
