--- a/agijagi/app/src/main/res/layout/fragment_delivery_tracking.xml
+++ b/agijagi/app/src/main/res/layout/fragment_delivery_tracking.xml
@@ -139,29 +139,31 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/view_delivery_tracking_stick">
 
-        <LinearLayout
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="vertical">
+            android:backgroundTint="@color/jagi_ivory"
+            app:cardCornerRadius="8dp"
+            app:strokeColor="@color/jagi_brown"
+            app:strokeWidth="1dp">
 
             <ImageView
                 android:id="@+id/imageView_delivery_tracking_product"
-                android:layout_width="112dp"
-                android:layout_height="84dp"
-                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="true"
-                android:background="@drawable/imageview_rounded_stroke"
-                android:src="@drawable/order_default_image" />
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/order_default_image" />
 
-        </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="8dp"
-            android:layout_weight="4"
+            android:layout_weight="3"
             android:orientation="vertical">
 
             <TextView
